Set default region to eu-central-1, as that is what we use at VismaSol.

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@
 # PUM_ACCOUNT=
 
 # AWS region (default: eu-west-1)
-# PUM_REGION=eu-west-1
+# PUM_REGION=eu-central-1
 
 # Fetch pre-defined profiles separated with commas
 # PUM_PROFILES=
