--- a/.env.example
+++ b/.env.example
@@ -11,13 +11,13 @@
 # Filter roles for the given AWS account
 # PUM_ACCOUNT=
 
-# AWS region (default: eu-west-1)
+# AWS region (default: eu-central-1)
 # PUM_REGION=eu-central-1
 
 # Fetch pre-defined profiles separated with commas
 # PUM_PROFILES=
 
-# Token duration time in hours (max: 3, default: 1)
+# Token duration time in hours (min: 1, max: 3, default: 1)
 # PUM_DURATION=1
 
 # Retry on failed login (default: false)
